infra/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: noter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: noter.info
    http:
      paths:
      - path: /
        backend:
          serviceName: note
          servicePort: 8080
      - path: /notification
        backend:
          serviceName: notification
          servicePort: 8081
